[package]
name = "rcat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
# Tambahkan syntect untuk syntax highlighting
syntect = "5.2.0" # Cek versi terbaru di crates.io jika perlu
# Tambahkan once_cell untuk inisialisasi global yang efisien (lazy static)
once_cell = "1.19.0"